Update Lecturer module
